removing redundant option to edit entries in user dropdown options

--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -38,7 +38,7 @@ Navigation bar across the top of the site for the researcher view.
               <a href="{% url 'research settings' %}" id="user-settings">Settings</a>
             </li>
             <li>
-              <a id="my-entries" href="{% url 'research my entries' %}">My entries</a>
+              <a id="my-entries" href="{% url 'list my entries' %}">Edit my entries</a>
             </li>
             <li class="uk-nav-divider"></li>
             <li>
