Use a class-based view with BasicSearchMixin for the landing page.

--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -13,7 +13,7 @@ Template for the landing page for the site.
   </div>
 
   <div class="uk-container uk-text-center uk-margin-top uk-width-1-2@m">
-    {% include "includes/searchbar.html" %}
+    {% include "includes/searchbar.html" with form=search_form only %}
   </div>
 
   <h2 class="uk-text-lead">
