--- a/src/templates/includes/searchbar.html
+++ b/src/templates/includes/searchbar.html
@@ -4,5 +4,8 @@ Template for a generic searchbar for the site.
 
 <form class="uk-width-1-1 uk-text-large uk-search uk-search-default" method="GET">
   <span uk-search-icon=""></span>
+  {{ form.query }}
+  {% comment %}
   <input class="uk-search-input uk-form-large" type="search" placeholder="Search...">
+  {% endcomment %}
 </form>
