Temporarily redirect the search bar on the home page to the search JSON API.

--- a/src/templates/includes/searchbar.html
+++ b/src/templates/includes/searchbar.html
@@ -2,7 +2,7 @@
 Template for a generic searchbar for the site.
 {% endcomment %}
 
-<form class="uk-width-1-1 uk-text-large uk-search uk-search-default" method="GET">
+<form class="uk-width-1-1 uk-text-large uk-search uk-search-default" method="GET" action="search/_basic">
   <span uk-search-icon=""></span>
   {{ form.query }}
   {% comment %}
