--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -50,6 +50,7 @@
   {% block javascripts %}
   <script type="application/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
   <script type="application/javascript" src="{% static 'js/uikit.min.js' %}"></script>
+  <script type="application/javascript" src="{% static 'js/particles.min.js' %}"></script>
   <script src="{% static 'js/uikit-icons.min.js' %}"></script>
   {% endblock %}
 
