Slightly darken the default background color of the page. Ensure that the search bar is not transparent.

--- a/src/templates/includes/searchbar.html
+++ b/src/templates/includes/searchbar.html
@@ -2,10 +2,7 @@
 Template for a generic searchbar for the site.
 {% endcomment %}
 
-<form class="uk-width-1-1 uk-text-large uk-search uk-search-default" method="GET">
+<form class="searchbar uk-width-1-1 uk-text-large uk-search uk-search-default" method="GET">
   <span uk-search-icon=""></span>
   {{ form.query }}
-  {% comment %}
-  <input class="uk-search-input uk-form-large" type="search" placeholder="Search...">
-  {% endcomment %}
 </form>
