--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,6 +7,10 @@ html, body {
   margin: 0;
 }
 
+html {
+  background-color: #f0f0f0;
+}
+
 body {
   display:flex;
   flex-direction:column;
@@ -78,6 +82,11 @@ br.sep {
   font-size: 1.5em;
   margin-top: auto;
   margin-bottom: 1em;
+}
+
+.searchbar {
+  background-color: white;
+  border: 4px black;
 }
 
 /****************************
