--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="uk-section uk-section-muted">
-  <div class="uk-container uk-container-center">
+  <div class="uk-padding-large">
     <h2 class="uk-h2">
       Your compendium entries
     </h2>
