--- a/src/templates/entry_list.html
+++ b/src/templates/entry_list.html
@@ -5,45 +5,52 @@ Display a list of entries from the compendium
 {% endcomment %}
 
 {% block body %}
-<div class="uk-margin-top">
-  <h1 class="uk-h1">
-    Search results
-  </h1>
+<div class="uk-container">
+  <div class="uk-margin-top">
+    <h1 class="uk-h1">
+      Search results
+    </h1>
 
-  <hr>
+    <hr>
 
-  <div class="uk-container">
-    {% for entry in page_obj %}
-      {% include 'includes/entry_snippet.html' with entry=entry only %}
-    {% endfor %}
+    <div class="uk-container">
+      {% for entry in page_obj %}
+        {% include 'includes/entry_snippet.html' with entry=entry only %}
+      {% endfor %}
+    </div>
   </div>
-</div>
 
-<br class="sep">
+  <br class="sep">
 
-<div>
-  <div class="uk-grid uk-text-center uk-width-1-1 paginator">
-    {# Display options to go to the next and previous page(s) #}
-    <div class="uk-width-1-3">
-    {% if page_obj.has_previous %}
-      <a href="?page=1">
-        <span uk-icon="icon:chevron-double-left;ratio:1.5"></span> first
-      </a> |
-      <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-    {% endif %}
-    </div>
+  {% comment %}
+  Pagination controls; allow user to go to next or previous page of
+  search results.
+  {% endcomment %}
 
-    <div class="uk-width-1-3">
-      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-    </div>
+  <div>
+    <div class="uk-grid uk-text-center uk-width-1-1 paginator">
+      {# Display options to go to the next and previous page(s) #}
+      <div class="uk-width-1-3">
+      {% if page_obj.has_previous %}
+        <a href="?page=1">
+          <span uk-icon="icon:chevron-double-left;ratio:1.5"></span> first
+        </a> |
+        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+      {% endif %}
+      </div>
 
-    <div class="uk-width-1-3">
-    {% if page_obj.has_next %}
-      <a href="?page={{ page_obj.next_page_number }}">next</a> |
-      <a href="?page={{ page_obj.paginator.num_pages }}">
-        last <span uk-icon="icon:chevron-double-right;ratio:1.5"></span>
-      </a>
-    {% endif %}
+      <div class="uk-width-1-3">
+        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+      </div>
+
+      <div class="uk-width-1-3">
+      {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">next</a> |
+        <a href="?page={{ page_obj.paginator.num_pages }}">
+          last <span uk-icon="icon:chevron-double-right;ratio:1.5"></span>
+        </a>
+      {% endif %}
+      </div>
     </div>
   </div>
 </div>
