--- a/src/templates/research_settings.html
+++ b/src/templates/research_settings.html
@@ -5,21 +5,23 @@
 {% block body %}
 
 {% load static %}
-<div class="uk-grid uk-margin-top">
-  <div class="uk-width-1-5@s">
-    <ul class="uk-tab-left" uk-tab="connect: #settings-switcher">
-      <li id="change-password-link" class="uk-active"><a href="#">Change password</a></li>
-      <li class="uk-active"><a href="#">Account settings</a></li>
-    </ul>
-  </div>
+<div class="uk-container">
+  <div class="uk-grid uk-margin-top">
+    <div class="uk-width-1-5@s">
+      <ul class="uk-tab-left" uk-tab="connect: #settings-switcher">
+        <li id="change-password-link" class="uk-active"><a href="#">Change password</a></li>
+        <li class="uk-active"><a href="#">Account settings</a></li>
+      </ul>
+    </div>
 
-  <div class="uk-width-4-5@s">
-    <ul id="settings-switcher" class="uk-switcher uk-margin">
-      <li>
-        {% include 'includes/password_change_form.html' with form=passchange_form %}
-      </li>
-      <li></li>
-    </ul>
+    <div class="uk-width-4-5@s">
+      <ul id="settings-switcher" class="uk-switcher uk-margin">
+        <li>
+          {% include 'includes/password_change_form.html' with form=passchange_form %}
+        </li>
+        <li></li>
+      </ul>
+    </div>
   </div>
 </div>
 {% endblock %}
