Complete adding basic search to the landing page. The search bar on the homepage will now query Solr and redirect users to the search results.

--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -39,11 +39,9 @@ Template for the landing page for the site.
 
       <br class="sep">
 
-      <div class="uk-text-center">
-        <button class="uk-margin-top uk-button uk-button-primary" type="submit" name="tags">
-          Search
-        </button>
-      </div>
+      <button class="uk-margin-left uk-margin-top uk-button uk-button-secondary" type="submit" name="tags">
+        Go <span uk-icon="icon: arrow-right"></span>
+      </button>
     </div>
   </form>
 </div>
