--- a/src/templates/includes/searchbar.html
+++ b/src/templates/includes/searchbar.html
@@ -2,7 +2,11 @@
 Template for a generic searchbar for the site.
 {% endcomment %}
 
-<form class="searchbar uk-width-1-1 uk-text-large uk-search uk-search-default" method="GET">
-  <span uk-search-icon=""></span>
-  {{ form.query }}
+<form class="uk-width-1-1 uk-text-large" method="GET" action="{% url 'search' %}">
+  <p>
+    {{ form.query }}
+  </p>
+  <button type="submit" class="uk-button uk-button-primary">
+    Search
+  </button>
 </form>
