--- a/src/templates/form_templates/bibtex_upload_form.html
+++ b/src/templates/form_templates/bibtex_upload_form.html
@@ -8,35 +8,21 @@ A form for uploading compendium entries as BibTeX
 </div>
 {% endif %}
 
-<div class="uk-grid uk-grid-divider">
-    {# File upload #}
-    <div class="uk-width-1-2">
-      <h2 class="uk-h2">
-        Upload a <span class="monospace">.bib</span> file
-      </h2>
+<div class="uk-width-1-2">
+  <h2 class="uk-h2">
+    Upload a BibTeX file
+  </h2>
 
-      {% if form.bibtex_file.errors %}
-        {{ form.bibtex_file.errors }}
-      {% endif %}
+  {% if form.bibtex_file.errors %}
+  <div class="uk-alert uk-alert-danger" role="alert">
+    {{ form.bibtex_file.errors }}
+  </div>
+  {% endif %}
 
-      {{ form.bibtex_file }}
-    </div>
-
-    {# Direct entry #}
-    <div class="uk-width-1-2">
-      <h2 class="uk-h2">
-        Enter BibTeX manually
-      </h2>
-
-      {% if form.bibtex_entry.errors %}
-        {{ form.bibtex_entry.errors }}
-      {% endif %}
-
-      <div class="uk-width-1-1 uk-margin-top">
-        {{ form.bibtex_entry }}
-      </div>
-    </div>
+  {{ form.bibtex_file }}
 </div>
+
+<div class="uk-margin-top"></div>
 
 <button type="submit" class="uk-button uk-button-primary" name="bibtex-upload">
   Submit
