Re-style landing. Make the 'about' section come before the tag selector, and the navbar links work.

--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -2,3 +2,8 @@
   font-family: "Roboto";
   src: url("Roboto-Regular.ttf") format("truetype");
 }
+
+@font-face {
+  font-family: "Nobile";
+  src: url("Nobile-Medium.ttf") format("truetype");
+}
