--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -13,8 +13,14 @@ Navigation bar across the top of the site for the researcher view.
       </li>
 
       <li>
-        <a href="#">
+        <a href="{% url 'landing page' %}#about">
           About
+        </a>
+      </li>
+
+      <li>
+        <a href="{% url 'landing page' %}#team">
+          Team
         </a>
     </ul>
   </div>
