--- a/src/templates/includes/searchbar.html
+++ b/src/templates/includes/searchbar.html
@@ -6,7 +6,8 @@ Template for a generic searchbar for the site.
   <p>
     {{ form.query }}
   </p>
-  <button type="submit" class="uk-button uk-button-primary">
+  <button type="submit" class="uk-width-1-4@m uk-button uk-button-primary">
     Search
+    {# <span uk-icon="icon: arrow-right; ratio: 1.5"></span> #}
   </button>
 </form>
