--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -38,12 +38,18 @@ br.sep {
 
 .site-title {
   font-weight: bold;
-  font-size: 4em;
+  font-size: 4.5em;
+  font-family: "Nobile", Roboto, arial, monospace;
 }
 
 .tag-selector-button {
   color: black;
   background-color: white;
+}
+
+.landing-page-searchbar {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 /****************************
@@ -65,6 +71,22 @@ br.sep {
 .selected-tag {
   background-color: #222 !important;
   color: #fff !important;
+}
+
+/****************************
+ * Links
+ ****************************/
+
+a.anchor {
+  text-decoration: none !important;
+  color: inherit !important;
+  pointer-events: inherit;
+  cursor: default;
+}
+
+a.anchor:hover {
+  text-decoration: none;
+  cursor: default;
 }
 
 /****************************
@@ -109,5 +131,5 @@ br.sep {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-color: #f0f0f0;
+  background-color: #e8e8e8;
 }
