--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -10,19 +10,37 @@ Template for the landing page for the site.
   {# Particle animation #}
   <div id="particles-js" class="particles-wrapper"></div>
 
-  <div class="uk-margin-top">
-    <h1 class="site-title uk-text-center uk-heading-primary uk-text-break">
-      <p>The Encryption</p>
-      <p>Compendium</p>
-    </h1>
-  </div>
+  <div class="uk-margin-top uk-grid-large uk-text-middle" uk-grid>
+    <div class="uk-width-1-2@l">
+      <h1 class="site-title uk-heading-primary uk-text-break">
+        <p>The</p>
+        <p>Encryption</p>
+        <p>Compendium</p>
+      </h1>
+    </div>
 
-  <div class="uk-container uk-text-center uk-margin-top uk-width-1-2@m">
-    {% include "includes/searchbar.html" with form=search_form only %}
+    <div class="landing-page-searchbar uk-text-center uk-width-1-2@l uk-text-middle">
+      {% include "includes/searchbar.html" with form=search_form only %}
+    </div>
   </div>
+</div>
 
-  <h2 class="uk-text-lead">
-    ... or search for the following tags:
+<div class="uk-margin-top" style="background-color: white;">
+  <div class="uk-container">
+    <br>
+    <h2 class="uk-h2">
+      <a class="anchor" id="about">About us</a>
+    </h2>
+    {% lorem 5 p %}
+    <br>
+  </div>
+</div>
+
+<br>
+
+<div class="uk-container">
+  <h2 class="uk-h2">
+    Search the encryption literature for the following categories:
   </h2>
 
   <form method="GET" action="{% url 'search' %}">
@@ -37,8 +55,6 @@ Template for the landing page for the site.
         {% endfor %}
       </div>
 
-      <br class="sep">
-
       <button class="uk-margin-left uk-margin-top uk-button uk-button-secondary" type="submit" name="tags">
         Go <span uk-icon="icon: arrow-right"></span>
       </button>
@@ -50,24 +66,13 @@ Template for the landing page for the site.
   <div class="uk-container">
     <br>
     <h2 class="uk-h2">
-      About us
-    </h2>
-    {% lorem 5 p %}
-    <br>
-  </div>
-</div>
-
-<div class="uk-margin-top">
-  <div class="uk-container">
-    <br>
-    <h2 class="uk-h2">
-      Team
+      <a class="anchor" id="team">Team</a>
     </h2>
     {% lorem 3 p %}
+    <br>
   </div>
 </div>
 
-<br class="sep">
 {% endblock %}
 
 {% block javascripts %}
