correcting errors in landing page

--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -99,7 +99,7 @@ Template for the landing page for the site.
       <div class="uk-width-1-2@l">
         <b class="uk-text-emphasis">TCP Web Development Team</b>
         <br>
-        <b class="uk-text-bold">Led by Dr. Dan Massey Director, TCP Program Director</b>
+        <b class="uk-text-bold">Led by Dr. Dan Massey, TCP Program Director</b>
         <ul class="uk-list uk-list-bullet">
           <li>
             Will Shand
