adding about us

--- a/src/templates/landing_page.html
+++ b/src/templates/landing_page.html
@@ -31,8 +31,11 @@ Template for the landing page for the site.
     <h2 class="uk-h2">
       <a class="anchor" id="about">About us</a>
     </h2>
-    {% lorem 5 p %}
+    The importance of strong encryption to protect the general public, organizations, and the governments from myriad cyber attacks is well understood. Encrypting data provides security and ensures user privacy in cyberspace. However, encryption has complicated law enforcements making it difficult for agencies to investigate cyber-crimes or obtain intel on issues related to national security. The encryption policy debate in the United States pitting privacy, and civil rights against national security, and law enforcement has gained a lot of traction in recent years. Often these debates lack input from different resources and they happen over and over again with the same debate points being applied to new encryption algorithms.
+    <br><br>
+    We are a group of students at the University of Colorado Law School and the Technology, Cybersecurity, and Policy program at the University of Colorado Boulder. Our mission is to serve as the buck stops here website for policy makers, law practitioners, law students and the general public to gain broad understanding on the encryption debate. We have put together a cohesive collection of research relating to the main themes of the encryption policy debate in the United States from 1970-2020. Resources are intended to focus on the breadth of the debate, but are not intended to store every document ever written on encryption policy.
     <br>
+    <br><br>
   </div>
 </div>
 
