Add spellchecking to Solr. Fixes #60.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -119,7 +119,7 @@ a.anchor:hover {
 
 .searchbar {
   background-color: white;
-  border: 4px black;
+  border: 1px solid black;
 }
 
 /****************************
