--- a/src/templates/article.html
+++ b/src/templates/article.html
@@ -65,7 +65,7 @@
       {% if article.url %}
       <div>
         <span class="uk-text-break">
-          <span class="uk-text-bold">URL:</span> <a href="{{ article.url }}"> {{ article.url }}</a>
+          <span class="uk-text-bold">URL:</span> <a href="{{ article.url }}" target="_blank" rel="noopener noreferrer"> {{ article.url }}</a>
         </span>
       </div>
       {% endif %}
